add aggregation search
